tests/baselines/reference/interfaceWithCallSignaturesThatHidesBaseSignature.errors.txt
interfaceWithCallSignaturesThatHidesBaseSignature.ts(10,9): error TS2454: Variable 'd' is used before being assigned.


==== interfaceWithCallSignaturesThatHidesBaseSignature.ts (1 errors) ====
    interface Foo {
        (): { a: number };
    }
    
    interface Derived extends Foo {
        (): { a: number; b: number };
    }
    
    var d: Derived;
    var r = d();
            ~
!!! error TS2454: Variable 'd' is used before being assigned.